--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
-# Enable GZIP Compression
+# Enable GZIP compression
 <IfModule mod_deflate.c>
     AddOutputFilterByType DEFLATE text/plain
     AddOutputFilterByType DEFLATE text/html
@@ -11,7 +11,7 @@
     AddOutputFilterByType DEFLATE application/x-javascript
 </IfModule>
 
-# Browser Caching
+# Set browser caching
 <IfModule mod_expires.c>
     ExpiresActive on
     ExpiresByType text/css "access plus 1 year"
@@ -20,14 +20,10 @@
     ExpiresByType image/jpg "access plus 1 year"
     ExpiresByType image/jpeg "access plus 1 year"
     ExpiresByType image/gif "access plus 1 year"
-    ExpiresByType image/ico "access plus 1 year"
-    ExpiresByType image/icon "access plus 1 year"
-    ExpiresByType text/plain "access plus 1 month"
-    ExpiresByType application/x-shockwave-flash "access plus 1 month"
-    ExpiresByType text/html "access plus 1 hour"
+    ExpiresByType image/svg+xml "access plus 1 year"
 </IfModule>
 
-# Security Headers
+# Security headers
 <IfModule mod_headers.c>
     Header always set X-Content-Type-Options nosniff
     Header always set X-Frame-Options DENY
@@ -44,6 +40,6 @@ RewriteRule ^(.*)$ https://alipakdelnia.github.io/$1 [L,R=301]
 RewriteCond %{HTTPS} off
 RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
-# Custom Error Pages
-ErrorDocument 404 /404.html
-ErrorDocument 500 /500.html
+# Custom error pages
+ErrorDocument 404 /index.html
+ErrorDocument 500 /index.html
